【个人中心】版本信息更新

--- a/application/index/view/personal/version.html
+++ b/application/index/view/personal/version.html
@@ -117,6 +117,15 @@
         data: {
             versionData:[
                 {
+                    number:'版本号：V1.3.4',
+                    date:'上线时间：2018-02-02',
+                    info:[
+                        {title:'1.园区企业频道合并到园区简介频道中；'},
+                        {title:'2.积分商城、园区活动以及园区论坛频道，合并成一个新频道：多彩园区；'},
+                        {title:'3.后台编辑器插件优化调整，园区企业频道新增信息导入功能；'},
+                    ]
+                },
+                {
                     number:'版本号：V1.3.3',
                     date:'上线时间：2018-01-15',
                     info:[
