--- a/application/admin/view/company/import.html
+++ b/application/admin/view/company/import.html
@@ -92,7 +92,7 @@
             success:function (data) {
                 if (data.code == 1){
                     swal({
-                        title: "未导入的企业名称",
+                        title: "未导入的企业信息",
                         text:data.data,
                         showCancelButton: true,
                         confirmButtonColor: "#DD6B55",
