--- a/application/admin/view/company/import.html
+++ b/application/admin/view/company/import.html
@@ -96,7 +96,7 @@
                         text:data.data,
                         showCancelButton: true,
                         confirmButtonColor: "#DD6B55",
-                        confirmButtonText: "确定!",
+                        confirmButtonText: "确定",
                         closeOnConfirm: true,
                         showCancelButton:false,
                     }, function () {
